# vix-find-panel: the find / find-and-replace box state (query, replacement,
# focused field, case/word/regex toggles, effective-pattern builder) and the
# search/replace engine over text (matches, next_match, replace_all,
# replace_one, unescape). The host renders the box and owns the buffer.

[package]
name = "vix-find-panel"
version = "0.1.0"
edition = "2021"
description = "Find / find-and-replace box state and pattern builder for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_find_panel"
path = "src/lib.rs"

[dependencies]
# Pattern building (escape) and the search/replace engine (find/replace logic).
regex = "1"
